# biggitybiggityO

./: .gitignore  Dockerfile  eval_set.csv  optuna_trials.db  optuna_trials_run2.db  pyproject.toml  pyvenv.cfg  requirements.txt  setup.sh  train.sh
.dvc/: config
.github/workflows/: python-app.yml
app/: inference.py  server.py
app/templates/: index.html
data/data/leetcode-parsed/: messy_leetcode_data.csv
data/data_experiment/train-mixed_eval-mixed/: eval.csv
data/preprocessing_scripts/scripts/: split.py
data_experiment/train-synthetic_eval-real/: eval.csv
datasets/: data.dvc  python_time_complexities.csv  test_set.json  train_set.json
datasets/data/: neetcode_data.jsonl
datasets/data/codecomplex/: codecomplex_data.csv
datasets/data/leetcode-parsed/: clean_leetcode_data.csv
datasets/data/neetcode-scraped/: neetcode_data.csv
datasets/preprocessing_scripts/: ai.py  ai_audit.py  ai_relabel.py  format.py  format_codes.py  format_labels.py  process_datasets.ipynb  relabel_ai.py  resample.ipynb  split.py  split_datasets.py  update_relabeled_dataset.ipynb  utils.py
datasets/preprocessing_scripts/notebooks/: downsample.ipynb
datasets/preprocessing_scripts/scripts/: format.py  split.py
datasets/preprocessing_scripts/src/: relabel_ai.py  utils.py
experiments/mlruns/0/: meta.yaml
hyperparameter-search/: optuna_trials_run3.db  optuna_trials_run4.db  optuna_trials_run5.db
src/app/: inference.py  main.py
src/eval_competitors/: eval_frontier_models.py  results.csv
src/training/: baseline.ipynb  biggitybiggityo.ipynb  finetune_starcoder2.ipynb
(+8884 files in other folders)
